--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/router": "^17.3.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "ngx-wow": "^2.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "wowjs": "^1.1.3",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
